# RoboRacer-firmware

./: .gitmodules  README.md
racing_bot_bringup/: package.xml  setup.cfg  setup.py
racing_bot_bringup/config/: ekf_one.yaml  ekf_two.yaml  slam_params.yaml
racing_bot_bringup/launch/: sensors_launch.py  slam_launch.py
racing_bot_control/: package.xml  setup.cfg  setup.py
racing_bot_control/config/: bicycle_control_node.yaml  velocity_control_node.yaml
racing_bot_control/racing_bot_control/: bicycle_control_node.py  keyboard_control.py  keyboard_node.py  velocity_control_node.py
racing_bot_control/racing_bot_control/lib/: control_node.py
racing_bot_encoder/: CMakeLists.txt  package.xml
racing_bot_encoder/config/: encoder_node.yaml
racing_bot_encoder/include/: encoder_constants.hpp  encoder_node.hpp  encoder_sensor.hpp
racing_bot_encoder/src/: encoder_node.cpp  encoder_sensor.cpp  main.cpp
racing_bot_encoder/test/: encoder_test.cpp
racing_bot_hat/: CMakeLists.txt  package.xml
racing_bot_hat/include/: hat_constants.hpp  hat_node.hpp
racing_bot_hat/src/: hat_node.cpp  main.cpp
racing_bot_hat/test/: hat_test.cpp
racing_bot_imu/: CMakeLists.txt  package.xml
racing_bot_imu/config/: imu_node.yaml
racing_bot_imu/include/: MadgwickAHRS.h  imu_constants.hpp  imu_node.hpp  transform_imu.h
racing_bot_imu/src/: MadgwickAHRS.cpp  imu_node.cpp  main.cpp
racing_bot_imu/test/: imu_test.cpp
racing_bot_interfaces/: CMakeLists.txt  package.xml
racing_bot_interfaces/msg/: BicycleControl.msg
racing_bot_odometry/: CMakeLists.txt  package.xml
racing_bot_odometry/config/: odometry_node.yaml
racing_bot_odometry/include/: odometry_node.hpp
racing_bot_odometry/src/: main.cpp  odometry_node.cpp
racing_bot_odometry/test/: odometry_test.cpp
